# cube-sniper

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: geometry.rs  lib.rs  main.rs  util.rs  wca.rs
tests/fixtures/: competitions.html  competitions.json
