[package]
name = "cube-sniper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cube-snipe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
select = "0.6.0"
serde_json = "1.0.117"

[profile.release]
strip = true
